--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "~16.18.40",
     "@types/react": "~18.2.20",
     "@types/react-dom": "~18.2.7",
+    "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "moment": "~2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.1",
     "typescript": "~4.9.5",
-    "web-vitals": "~2.1.4"
+    "web-vitals": "~2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
